fixed decimal behaviour and off screen rendering

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -132,7 +132,15 @@ main {
     display: flex;
     justify-content: space-between;
     height: 10%;
-    background-color: beige;
+  }
+
+  &__time {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Inter', sans-serif;
+    font-weight: 300;
+    font-size: 0.5rem;
   }
 
   &__calculations {
